--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "73d39d76",
+   "id": "496a5596",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0fb7fe85",
+   "id": "33ef5853",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9ed4046",
+   "id": "1952fad2",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "95a69089",
+   "id": "3bc67c1c",
    "metadata": {
     "scrolled": true
    },
@@ -106,12 +106,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a19d96f9",
+   "id": "965d5fcb",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
     "\n",
-    "We can now use the `ray.data.read_binary_files` function to read all the images from S3. We set the `include_paths=True` option to create a dataset of the S3 paths and image contents. We then run the `.map` function on this dataset to execute the actual OCR process on each file and convert the screen shots into text.\n",
+    "We can now use the {meth}`ray.data.read_binary_files <ray.data.read_binary_files>` function to read all the images from S3. We set the `include_paths=True` option to create a dataset of the S3 paths and image contents. We then run the {meth}`ds.map <ray.data.Dataset.map>` function on this dataset to execute the actual OCR process on each file and convert the screen shots into text.\n",
     "\n",
     "````{note}\n",
     "If you want to load the data from a private bucket, you have to run\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9ec8a976",
+   "id": "cb977017",
    "metadata": {},
    "outputs": [
     {
@@ -159,16 +159,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba12f8b3",
+   "id": "daa4d876",
    "metadata": {},
    "source": [
-    "Let us have a look at some of the data points with the `take` function."
+    "Let us have a look at some of the data points with the {meth}`take <ray.data.Dataset.take>` function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7512433f",
+   "id": "882a8f6c",
    "metadata": {},
    "outputs": [
     {
@@ -193,18 +193,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc8960b7",
+   "id": "ffe76bf0",
    "metadata": {},
    "source": [
     "### Saving and loading the result of the OCR run\n",
     "\n",
-    "We are also going to save the result of running tesseract on the dataset on disk so we can read it out later if we want to re-run the NLP analysis without needing to re-run the OCR (which is very expensive on the whole dataset)."
+    "We are also going to save the result of running tesseract on the dataset on disk so we can read it out later if we want to re-run the NLP analysis without needing to re-run the OCR (which is very expensive on the whole dataset). This can be done with the {meth}`write_parquet <ray.data.Dataset.write_parquet>` function:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4f516b7",
+   "id": "2c2b9474",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,16 +214,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8623d83a",
+   "id": "c8ba1e0d",
    "metadata": {},
    "source": [
-    "You can later reload the dataset with"
+    "You can later reload the dataset with the {meth}`read_parquet <ray.data.read_parquet>` function:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "219670e8",
+   "id": "4ba34a91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ceae536",
+   "id": "39c732c4",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2458b3ae",
+   "id": "18ef871a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5837c6cf",
+   "id": "2f0a31b5",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6ccf5a44",
+   "id": "fae9c990",
    "metadata": {},
    "outputs": [
     {
@@ -300,18 +300,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "510233c4",
+   "id": "24eb67be",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
     "\n",
-    "In order to run the code on the dataset, we should use Ray Datasets' built in support for actors since the `nlp` object is not serializable and we want to avoid having to recreate it for each individual sentence:"
+    "In order to run the code on the dataset, we should use Ray Datasets' built in support for actors since the `nlp` object is not serializable and we want to avoid having to recreate it for each individual sentence. We also batch the computation with the {meth}`map_batches <ray.data.Dataset.map_batches>` function to ensure spaCy can use more efficient vectorized operations where available:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a05255a7",
+   "id": "fe2eefb6",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9440e1e7",
+   "id": "0345c2b3",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "aa2b732f",
+   "id": "0b34c9df",
    "metadata": {
     "scrolled": true
    },
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b4676f6",
+   "id": "12a6d277",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f0b909a",
+   "id": "5ab00e95",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "333d43fb",
+   "id": "d0c1a713",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72e7f827",
+   "id": "978a88bc",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
