--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "496a5596",
+   "id": "cb0b3004",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "33ef5853",
+   "id": "190a92ed",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1952fad2",
+   "id": "9f5dbb03",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "3bc67c1c",
+   "id": "01527865",
    "metadata": {
     "scrolled": true
    },
@@ -106,12 +106,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "965d5fcb",
+   "id": "eeed0106",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
     "\n",
-    "We can now use the {meth}`ray.data.read_binary_files <ray.data.read_binary_files>` function to read all the images from S3. We set the `include_paths=True` option to create a dataset of the S3 paths and image contents. We then run the {meth}`ds.map <ray.data.Dataset.map>` function on this dataset to execute the actual OCR process on each file and convert the screen shots into text.\n",
+    "We can now use the {meth}`ray.data.read_binary_files <ray.data.read_binary_files>` function to read all the images from S3. We set the `include_paths=True` option to create a dataset of the S3 paths and image contents. We then run the {meth}`ds.map <ray.data.Dataset.map>` function on this dataset to execute the actual OCR process on each file and convert the screen shots into text. This will create a tabular dataset with columns `path` and `text`.\n",
     "\n",
     "````{note}\n",
     "If you want to load the data from a private bucket, you have to run\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cb977017",
+   "id": "30dbe921",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daa4d876",
+   "id": "261b277c",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the {meth}`take <ray.data.Dataset.take>` function."
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "882a8f6c",
+   "id": "49abc5e4",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffe76bf0",
+   "id": "92692057",
    "metadata": {},
    "source": [
     "### Saving and loading the result of the OCR run\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c2b9474",
+   "id": "2db346e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8ba1e0d",
+   "id": "32318ad2",
    "metadata": {},
    "source": [
     "You can later reload the dataset with the {meth}`read_parquet <ray.data.read_parquet>` function:"
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ba34a91",
+   "id": "eacd5a17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39c732c4",
+   "id": "bc2336f2",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ef871a",
+   "id": "0fd52a8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f0a31b5",
+   "id": "43ca18a1",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fae9c990",
+   "id": "d9bb9f56",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24eb67be",
+   "id": "860b7568",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fe2eefb6",
+   "id": "298a4dc7",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0345c2b3",
+   "id": "59807469",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "0b34c9df",
+   "id": "ac3d712f",
    "metadata": {
     "scrolled": true
    },
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12a6d277",
+   "id": "49e7cde3",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ab00e95",
+   "id": "f15f7ea0",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d0c1a713",
+   "id": "2c99a0ee",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "978a88bc",
+   "id": "ec25916f",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
