--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cb0b3004",
+   "id": "bd34beda",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "190a92ed",
+   "id": "4696df12",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f5dbb03",
+   "id": "54e4cc1b",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "01527865",
+   "id": "bec49c01",
    "metadata": {
     "scrolled": true
    },
@@ -106,12 +106,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeed0106",
+   "id": "7cdf4eef",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
     "\n",
-    "We can now use the {meth}`ray.data.read_binary_files <ray.data.read_binary_files>` function to read all the images from S3. We set the `include_paths=True` option to create a dataset of the S3 paths and image contents. We then run the {meth}`ds.map <ray.data.Dataset.map>` function on this dataset to execute the actual OCR process on each file and convert the screen shots into text. This will create a tabular dataset with columns `path` and `text`.\n",
+    "We can now use the {meth}`ray.data.read_binary_files <ray.data.read_binary_files>` function to read all the images from S3. We set the `include_paths=True` option to create a dataset of the S3 paths and image contents. We then run the {meth}`ds.map <ray.data.Dataset.map>` function on this dataset to execute the actual OCR process on each file and convert the screen shots into text. This will create a tabular dataset with columns `path` and `text`, see also [](transform_datasets_row_output_types).\n",
     "\n",
     "````{note}\n",
     "If you want to load the data from a private bucket, you have to run\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "30dbe921",
+   "id": "f12475f1",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "261b277c",
+   "id": "66aae641",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the {meth}`take <ray.data.Dataset.take>` function."
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "49abc5e4",
+   "id": "f68a10ca",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92692057",
+   "id": "49376307",
    "metadata": {},
    "source": [
     "### Saving and loading the result of the OCR run\n",
@@ -204,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2db346e5",
+   "id": "6cfb1e00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32318ad2",
+   "id": "4cb4b005",
    "metadata": {},
    "source": [
     "You can later reload the dataset with the {meth}`read_parquet <ray.data.read_parquet>` function:"
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eacd5a17",
+   "id": "a41775d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc2336f2",
+   "id": "5a063b3b",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fd52a8d",
+   "id": "f789b3a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43ca18a1",
+   "id": "2139ba7f",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d9bb9f56",
+   "id": "2a3c8d0c",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "860b7568",
+   "id": "c72adbac",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "298a4dc7",
+   "id": "69dd7d2d",
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59807469",
+   "id": "b7cc4a9a",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ac3d712f",
+   "id": "1bc6a0dc",
    "metadata": {
     "scrolled": true
    },
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49e7cde3",
+   "id": "9b506b98",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f15f7ea0",
+   "id": "c0754265",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2c99a0ee",
+   "id": "cdd41a0c",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec25916f",
+   "id": "3b6e501a",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
