--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "bd34beda",
+   "execution_count": 4,
+   "id": "5c5af815",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4696df12",
+   "id": "691077e0",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54e4cc1b",
+   "id": "978baa98",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -74,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "bec49c01",
+   "execution_count": 2,
+   "id": "657da260",
    "metadata": {
     "scrolled": true
    },
@@ -84,16 +84,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-30 08:58:31,435\tINFO services.py:1476 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n"
+      "2022-07-04 14:35:19,444\tINFO services.py:1476 -- View the Ray dashboard at \u001b[1m\u001b[32mhttp://127.0.0.1:8265\u001b[39m\u001b[22m\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "RayContext(dashboard_url='127.0.0.1:8265', python_version='3.7.4', ray_version='1.13.0', ray_commit='e4ce38d001dbbe09cd21c497fedd03d692b2be3e', address_info={'node_ip_address': '127.0.0.1', 'raylet_ip_address': '127.0.0.1', 'redis_address': None, 'object_store_address': '/tmp/ray/session_2022-06-30_08-58-28_638637_83607/sockets/plasma_store', 'raylet_socket_name': '/tmp/ray/session_2022-06-30_08-58-28_638637_83607/sockets/raylet', 'webui_url': '127.0.0.1:8265', 'session_dir': '/tmp/ray/session_2022-06-30_08-58-28_638637_83607', 'metrics_export_port': 61988, 'gcs_address': '127.0.0.1:60797', 'address': '127.0.0.1:60797', 'node_id': '1bf5ac03191a8d67d1a192acc27bb5739dfd5d599ee46c46219605b4'})"
+       "RayContext(dashboard_url='127.0.0.1:8265', python_version='3.7.4', ray_version='1.13.0', ray_commit='e4ce38d001dbbe09cd21c497fedd03d692b2be3e', address_info={'node_ip_address': '127.0.0.1', 'raylet_ip_address': '127.0.0.1', 'redis_address': None, 'object_store_address': '/tmp/ray/session_2022-07-04_14-35-16_950060_89285/sockets/plasma_store', 'raylet_socket_name': '/tmp/ray/session_2022-07-04_14-35-16_950060_89285/sockets/raylet', 'webui_url': '127.0.0.1:8265', 'session_dir': '/tmp/ray/session_2022-07-04_14-35-16_950060_89285', 'metrics_export_port': 60416, 'gcs_address': '127.0.0.1:61663', 'address': '127.0.0.1:61663', 'node_id': 'b6c981243d51558d13e4290f0f63552a6126f8a8d9e472baafe9dd5b'})"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cdf4eef",
+   "id": "785f4992",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -130,16 +130,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "f12475f1",
+   "execution_count": 5,
+   "id": "81b517d3",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-06-30 09:15:35,088\tWARNING read_api.py:256 -- The number of blocks in this dataset (3) limits its parallelism to 3 concurrent tasks. This is much less than the number of available CPU slots in the cluster. Use `.repartition(n)` to increase the number of dataset blocks.\n",
-      "Read->Map: 100%|██████████| 3/3 [00:14<00:00,  4.69s/it]\n"
+      "2022-07-04 14:35:53,683\tWARNING read_api.py:256 -- The number of blocks in this dataset (3) limits its parallelism to 3 concurrent tasks. This is much less than the number of available CPU slots in the cluster. Use `.repartition(n)` to increase the number of dataset blocks.\n",
+      "Read->Map: 100%|██████████| 3/3 [00:07<00:00,  2.34s/it]\n"
      ]
     }
    ],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66aae641",
+   "id": "6cad6c43",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the {meth}`take <ray.data.Dataset.take>` function."
@@ -167,8 +167,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f68a10ca",
+   "execution_count": 6,
+   "id": "c1b5aa54",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "           'text': 'File Edit View Bookmarks\\n\\n[i New Tab [If] split view ~\\n\\n43044 kousekip\\n\\nPlugins\\n\\nkousekip:ako-kaede-mirai(htop)\\n\\nkousekip:ako-kaede-mirai(qemu-system-x86)\\n\\nSettings\\n\\nHelp\\n\\nkousekip:ako-kaede-miral(htop) — Konsole vax\\n\\nFl Paste Q Find\\n\\nEMU vax\\n\\nMachine View\\n\\nApplications Places System @)C) Fri Feb 18, 13:56\\n\\nTerminal\\n\\nroot root\\nroot sys\\nroot sys\\nroot sys\\nroot sys\\nroot sys\\nroot root\\nroot sys\\nroot bin\\nroot root\\nroot sys\\nroot root\\nroot sys\\nroot sys\\nroot root\\nroot root\\nroot root\\nroot sys\\nroot root\\nroot sys\\nroot sys\\n2 root —sys\\nkousekip@ako-kaede-mirai-sun:~$ If\\n\\nbin -> ./usr/bin\\nboot\\ndev\\ndevices\\netc\\nexport\\nhome\\nkernel\\nlib\\nmedia\\nmnt\\n\\nnet\\nopt\\nplatform\\nproc\\nroot\\nrpool\\nsbin\\nsystem\\n‘tmp\\nusr\\nvar\\n\\n@kousekip\\nidesktop\\n\\n©\\n\\n©\\n\\nBUNwnSunennh SnuNaeon\\n\\n(Documents\\nDownloads\\nGaMusic\\n\\n5\\n\\nBitrash\\nDevices\\n(Floppy Drive\\nNetwork\\n\\n@ Browse Netw...\\n\\n9\\n9\\n6\\n4\\n9\\n\\n53\\n5\\n6\\n4\\n9\\n10\\n0\\n6\\n18\\n7\\n\\nfovey\\\\aliarel(elare)\\n\\n'})]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49376307",
+   "id": "c6821410",
    "metadata": {},
    "source": [
     "### Saving and loading the result of the OCR run\n",
@@ -203,10 +203,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6cfb1e00",
+   "execution_count": 7,
+   "id": "b4795881",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Write Progress: 100%|██████████| 3/3 [00:00<00:00, 207.11it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "results.write_parquet(os.path.expanduser(\"~/LightShot13k_results\"))"
@@ -214,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cb4b005",
+   "id": "458106bc",
    "metadata": {},
    "source": [
     "You can later reload the dataset with the {meth}`read_parquet <ray.data.read_parquet>` function:"
@@ -222,17 +230,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a41775d5",
+   "execution_count": 8,
+   "id": "d061f0d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-07-04 14:36:13,515\tWARNING read_api.py:256 -- The number of blocks in this dataset (6) limits its parallelism to 6 concurrent tasks. This is much less than the number of available CPU slots in the cluster. Use `.repartition(n)` to increase the number of dataset blocks.\n"
+     ]
+    }
+   ],
    "source": [
     "results = ray.data.read_parquet(os.path.expanduser(\"~/LightShot13k_results\"))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5a063b3b",
+   "id": "d0bf4f80",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -249,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f789b3a6",
+   "id": "7447734e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2139ba7f",
+   "id": "4071cce3",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -268,17 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "2a3c8d0c",
+   "execution_count": 9,
+   "id": "f3f0e0ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'language': 'en', 'score': 0.9999974450049829}"
+       "{'language': 'en', 'score': 0.9999976594668697}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c72adbac",
+   "id": "3ba3bfb8",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -310,24 +326,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "69dd7d2d",
+   "execution_count": 10,
+   "id": "4db6c3fd",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map Progress (1 actors 1 pending): 100%|██████████| 3/3 [00:07<00:00,  2.40s/it]\n"
+      "Read progress: 100%|██████████| 6/6 [00:00<00:00, 485.55it/s]\n",
+      "Map Progress (1 actors 1 pending): 100%|██████████| 6/6 [00:06<00:00,  1.04s/it]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Dataset(num_blocks=3, num_rows=3, schema={path: string, text: string, language: string, score: double})"
+       "Dataset(num_blocks=6, num_rows=6, schema={path: object, text: object, language: object, score: float64})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7cc4a9a",
+   "id": "e2011d94",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -366,8 +383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "1bc6a0dc",
+   "execution_count": 11,
+   "id": "72910730",
    "metadata": {
     "scrolled": true
    },
@@ -376,18 +393,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map Progress (1 actors 1 pending): 100%|██████████| 3/3 [00:05<00:00,  1.72s/it]\n",
-      "Sort Sample: 100%|██████████| 3/3 [00:00<00:00, 257.45it/s]\n",
-      "Shuffle Map: 100%|██████████| 3/3 [00:00<00:00, 211.76it/s]\n",
-      "Shuffle Reduce: 100%|██████████| 3/3 [00:00<00:00, 407.50it/s]"
+      "Read: 100%|██████████| 6/6 [00:00<00:00, 19.95it/s]\n",
+      "Map Progress (1 actors 1 pending): 100%|██████████| 6/6 [00:05<00:00,  1.09it/s]\n",
+      "Sort Sample: 100%|██████████| 6/6 [00:00<00:00, 919.27it/s]\n",
+      "Shuffle Map: 100%|██████████| 6/6 [00:00<00:00, 159.14it/s]\n",
+      "Shuffle Reduce: 100%|██████████| 6/6 [00:00<00:00, 364.59it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'language': 'af', 'count()': 1}\n",
-      "{'language': 'en', 'count()': 2}\n"
+      "{'language': 'af', 'count()': 2}\n",
+      "{'language': 'en', 'count()': 4}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -398,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b506b98",
+   "id": "b53fa6f0",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -430,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0754265",
+   "id": "f62423d7",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -438,34 +463,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "cdd41a0c",
+   "execution_count": 12,
+   "id": "f3badf0b",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Filter: 100%|██████████| 3/3 [00:00<00:00, 568.28it/s]\n",
-      "Sort Sample: 100%|██████████| 3/3 [00:00<00:00, 1765.03it/s]\n",
-      "Shuffle Map: 100%|██████████| 3/3 [00:00<00:00, 581.06it/s]\n",
-      "Shuffle Reduce: 100%|██████████| 3/3 [00:00<00:00, 673.71it/s]\n"
+      "Filter: 100%|██████████| 6/6 [00:00<00:00, 561.84it/s]\n",
+      "Sort Sample: 100%|██████████| 6/6 [00:00<00:00, 1311.81it/s]\n",
+      "Shuffle Map: 100%|██████████| 6/6 [00:00<00:00, 319.24it/s]\n",
+      "Shuffle Reduce: 100%|██████████| 6/6 [00:00<00:00, 450.79it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[ArrowRow({'path': '/tmp/ocr_data/1.png',\n",
-       "           'text': 'Take Screenshot\\n\\n© Grab the whole screen\\nGrab the current window\\n\\n|_| eeeeeeter\\n\\nGrab after a delay of 0 +. seconds\\n\\nEffects\\nInclude pointer\\n¥ Include the window border\\n\\nApply effect: None Sa\\n',\n",
+       "[ArrowRow({'path': 'air-example-data/ocr_tiny_dataset/gnome_screenshot.png',\n",
+       "           'text': '= Cancel\\n\\nTake Screenshot\\n© Grab the whole screen\\n\\nGrab the current window\\n\\n|_| eeeeeeter\\n\\nGrab after a delay of 0\\n\\nEffects\\nInclude pointer\\n\\n¥ Include the window border\\n\\nApply effect: None Sa\\n\\n+. seconds\\n',\n",
        "           'language': 'en',\n",
-       "           'score': 0.999997372590989}),\n",
-       " ArrowRow({'path': '/tmp/ocr_data/2.png',\n",
-       "           'text': '© Viktor (Online) : Message Session\\n\\n“etto| © Whter | steno\\n\\nremus\\ntet? Fiviha\\n\\n17: dokonca to vie aj video @\\nViktor\\n\\n1818. 55 samozrejme\\n\\nremus\\n\\n‘e138: hmm\\n\\ntere: a skusal si to uz?\\n\\nViktor\\n\\na:18: €€\\n\\n1818: len moj brat to skusal\\nremus\\n\\nWA\\n\\nOG8hO38\\n\\nseettsgmailcom [0]\\nonline\\n\\n@ Heenan a\\n\\nOnline\\n\\nsero\\nBEE:..... 0088\\n@ ore\\n\\naway\\n\\nTue\\nhn\\n\\n& Wee\\n\\nYep, Tm here\\n\\n',\n",
+       "           'score': 0.9999976791815426}),\n",
+       " ArrowRow({'path': 'air-example-data/ocr_tiny_dataset/gnome_screenshot.png',\n",
+       "           'text': '= Cancel\\n\\nTake Screenshot\\n© Grab the whole screen\\n\\nGrab the current window\\n\\n|_| eeeeeeter\\n\\nGrab after a delay of 0\\n\\nEffects\\nInclude pointer\\n\\n¥ Include the window border\\n\\nApply effect: None Sa\\n\\n+. seconds\\n',\n",
        "           'language': 'en',\n",
-       "           'score': 0.7142816263267835})]"
+       "           'score': 0.9999965244942747}),\n",
+       " ArrowRow({'path': 'air-example-data/ocr_tiny_dataset/miranda_screenshot.png',\n",
+       "           'text': '© Viktor (Online) : Message Session\\n\\n“etto| © Whter | steno\\n\\nremus\\ntet? Fiviha\\n\\n17: dokonca to vie aj video @\\nViktor\\n\\n1818. 55 samozrejme\\n\\n1818: len moj brat to skusal\\nremus\\n\\nWA\\n\\n098003 —\\n\\nseettsgmailcom [0]\\n\\nonline\\n\\nHacemen\\n@ Ce\\n\\nieFFo\\n169 6 je <>vin ©®\\n\\nBe 22\\n\\naway\\n\\nTue\\nhn\\n\\n& Wee\\n\\nYep, Tm here\\n\\n&\\nea\\na\\nLS]\\n\\n',\n",
+       "           'language': 'en',\n",
+       "           'score': 0.8571411027551514}),\n",
+       " ArrowRow({'path': 'air-example-data/ocr_tiny_dataset/miranda_screenshot.png',\n",
+       "           'text': '© Viktor (Online) : Message Session\\n\\n“etto| © Whter | steno\\n\\nremus\\ntet? Fiviha\\n\\n17: dokonca to vie aj video @\\nViktor\\n\\n1818. 55 samozrejme\\n\\n1818: len moj brat to skusal\\nremus\\n\\nWA\\n\\n098003 —\\n\\nseettsgmailcom [0]\\n\\nonline\\n\\nHacemen\\n@ Ce\\n\\nieFFo\\n169 6 je <>vin ©®\\n\\nBe 22\\n\\naway\\n\\nTue\\nhn\\n\\n& Wee\\n\\nYep, Tm here\\n\\n&\\nea\\na\\nLS]\\n\\n',\n",
+       "           'language': 'en',\n",
+       "           'score': 0.5714285419353925})]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b6e501a",
+   "id": "18dabd5f",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
