--- a/python/ray/air/examples/tf/tensorflow_autoencoder_example.ipynb
+++ b/python/ray/air/examples/tf/tensorflow_autoencoder_example.ipynb
@@ -2034,7 +2034,7 @@
     }
    ],
    "source": [
-    "from ray.air.train.integrations.tensorflow import TensorflowTrainer\n",
+    "from ray.train.tensorflow import TensorflowTrainer\n",
     "from ray.air.result import Result\n",
     "\n",
     "def train_tensorflow_mnist(\n",
