add note about persisting

--- a/doc/source/data/examples/ocr_example.ipynb
+++ b/doc/source/data/examples/ocr_example.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5c5af815",
+   "id": "413792c9",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "691077e0",
+   "id": "e89cb8c7",
    "metadata": {},
    "source": [
     "# Scaling OCR using Ray Datasets\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "978baa98",
+   "id": "199904be",
    "metadata": {},
    "source": [
     "Let's now import Ray and initialize a local Ray cluster. If you want to run OCR at a very large scale, you should run this workload on a multi-node cluster."
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "657da260",
+   "id": "c3b5178a",
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "785f4992",
+   "id": "9efff7c5",
    "metadata": {},
    "source": [
     "### Running the OCR software on the data\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "81b517d3",
+   "id": "c8730951",
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cad6c43",
+   "id": "c052111d",
    "metadata": {},
    "source": [
     "Let us have a look at some of the data points with the {meth}`take <ray.data.Dataset.take>` function."
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c1b5aa54",
+   "id": "756428f2",
    "metadata": {},
    "outputs": [
     {
@@ -193,18 +193,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6821410",
+   "id": "caac4b20",
    "metadata": {},
    "source": [
     "### Saving and loading the result of the OCR run\n",
     "\n",
-    "We are also going to save the result of running tesseract on the dataset on disk so we can read it out later if we want to re-run the NLP analysis without needing to re-run the OCR (which is very expensive on the whole dataset). This can be done with the {meth}`write_parquet <ray.data.Dataset.write_parquet>` function:"
+    "````{note}\n",
+    "Saving the dataset is optional, you can also continue with the in-memory data without persisting it to storage.\n",
+    "````\n",
+    "\n",
+    "We can save the result of running tesseract on the dataset on disk so we can read it out later if we want to re-run the NLP analysis without needing to re-run the OCR (which is very expensive on the whole dataset). This can be done with the {meth}`write_parquet <ray.data.Dataset.write_parquet>` function:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b4795881",
+   "id": "b44a9fbc",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "458106bc",
+   "id": "439e4750",
    "metadata": {},
    "source": [
     "You can later reload the dataset with the {meth}`read_parquet <ray.data.read_parquet>` function:"
@@ -231,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "d061f0d2",
+   "id": "b280be38",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0bf4f80",
+   "id": "1344b68e",
    "metadata": {},
    "source": [
     "### Process the extracted text data with spaCy\n",
@@ -265,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7447734e",
+   "id": "f11fda81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4071cce3",
+   "id": "587983de",
    "metadata": {},
    "source": [
     "This is some code to determine the language of a piece of text:"
@@ -285,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f3f0e0ac",
+   "id": "cb8b105e",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ba3bfb8",
+   "id": "1c097710",
    "metadata": {},
    "source": [
     "It gives both the language and a confidence score for that language.\n",
@@ -327,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "4db6c3fd",
+   "id": "f7ba1a27",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2011d94",
+   "id": "67ad32e4",
    "metadata": {},
    "source": [
     "We can now get language statistics over the whole dataset:"
@@ -384,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "72910730",
+   "id": "b6350fd1",
    "metadata": {
     "scrolled": true
    },
@@ -416,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b53fa6f0",
+   "id": "e33c16c2",
    "metadata": {},
    "source": [
     "````{note}\n",
@@ -448,7 +452,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f62423d7",
+   "id": "618256f4",
    "metadata": {},
    "source": [
     "We can now filter to include only the English documents and also sort them according to their score."
@@ -457,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f3badf0b",
+   "id": "a7012279",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +506,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18dabd5f",
+   "id": "1be83fef",
    "metadata": {},
    "source": [
     "If you are interested in this example and want to extend it, you can do the following for the full dataset:\n",
